Make sure spans in navbar are legible at all times

--- a/web/cobrands/bexley/layout.scss
+++ b/web/cobrands/bexley/layout.scss
@@ -37,7 +37,8 @@ body.twothirdswidthpage .content .sticky-sidebar aside {
         }
     }
     a.report-a-problem-btn,
-    span.report-a-problem-btn {
+    span.report-a-problem-btn,
+    span {
         background-color: $nav_hover_background_colour;
         color: $text_black;
         border-radius: 0;
